Implement navigation bar and update main section padding
Added a navigation bar and adjusted main section padding.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Staff Engineering Product Manager specializing in Product Analytics & In-App Content at Splunk (Cisco).">
 
     <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script
     <script>
         tailwind.config = {
             theme: {
@@ -899,8 +899,18 @@
     </style>
 </head>
 <body class="font-charter text-gray-800 antialiased">
+    <!-- Navigation -->
+    <nav class="fixed top-0 left-0 right-0 z-50" style="background:rgba(255,255,255,0.45);backdrop-filter:blur(12px);-webkit-backdrop-filter:blur(12px);border-bottom:1px solid rgba(255,255,255,0.6);box-shadow:0 4px 24px rgba(0,0,0,0.04)">
+        <div class="max-w-2xl mx-auto px-6 py-3 flex items-center justify-between">
+            <a href="/" class="text-sm font-semibold text-gray-700 hover:text-gray-900 transition-colors">Brandon Noskoviak</a>
+            <div class="flex items-center gap-4">
+                <a href="/blog/" class="text-sm text-gray-600 hover:text-gray-900 px-3 py-1.5 rounded-lg transition-colors hover:bg-white/50">Blog</a>
+                <a href="#contact" class="text-sm text-gray-600 hover:text-gray-900 px-3 py-1.5 rounded-lg transition-colors hover:bg-white/50">Contact</a>
+            </div>
+        </div>
+    </nav>
 
-    <main class="max-w-2xl mx-auto px-6 py-16 md:py-24">
+    <main class="max-w-2xl mx-auto px-6 pt-24 pb-16 md:pt-28 md:pb-24">
 
         <!-- Hero Section -->
         <header class="mb-16" data-tour="hero">
