Update portfolio nav link from /blog/ to /writing/

--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
         <div class="max-w-2xl mx-auto px-6 py-3 flex items-center justify-between">
             <a href="/" class="text-sm font-semibold text-gray-700 hover:text-gray-900 transition-colors">Brandon Noskoviak</a>
             <div class="flex items-center gap-4">
-                <a href="/blog/" class="text-sm text-gray-600 hover:text-gray-900 px-3 py-1.5 rounded-lg transition-colors hover:bg-white/50">Blog</a>
+                <a href="/writing/" class="text-sm text-gray-600 hover:text-gray-900 px-3 py-1.5 rounded-lg transition-colors hover:bg-white/50">Blog</a>
                 <a href="#contact" class="text-sm text-gray-600 hover:text-gray-900 px-3 py-1.5 rounded-lg transition-colors hover:bg-white/50">Contact</a>
             </div>
         </div>
@@ -953,7 +953,7 @@
                     that feel natural to users and actionable to product teams.
                 </p>
                 <p>
-                    I create the systems that let teams self-serve insights at scale—and I
+                    I create the systems that let teams self-serve insights at scaleâand I
                     jump in myself to analyze, teach, and guide when the situation calls for it.
                 </p>
             </div>
@@ -973,7 +973,7 @@
                             Staff Engineering Product Manager
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            Feb 2025 — Present
+                            Feb 2025 â Present
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Splunk (Cisco)</p>
@@ -993,7 +993,7 @@
                             Senior Program Manager, Digital Adoption
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            Sep 2020 — Feb 2025
+                            Sep 2020 â Feb 2025
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Jamf</p>
@@ -1010,7 +1010,7 @@
                             Enterprise Customer Success Manager
                         </h3>
                         <span class="text-sm text-gray-600 font-medium tracking-wide">
-                            2019 — 2020
+                            2019 â 2020
                         </span>
                     </div>
                     <p class="text-indigo-700 font-medium mb-3">Jamf</p>
@@ -1107,7 +1107,7 @@
         <!-- Footer -->
         <footer class="text-center pt-4">
             <p class="text-sm text-gray-600">
-                © 2026 Brandon Noskoviak
+                Â© 2026 Brandon Noskoviak
             </p>
         </footer>
 
@@ -1296,13 +1296,13 @@
                 target: '[data-tour="hero"]',
                 meta: 'In-App Content',
                 title: 'Welcome to the Tour',
-                content: 'This is an example of in-app content — contextual guidance that helps users understand a product. Click "Next" to explore each section, or close anytime.'
+                content: 'This is an example of in-app content â contextual guidance that helps users understand a product. Click "Next" to explore each section, or close anytime.'
             },
             {
                 target: '[data-tour="about"]',
                 meta: 'Section 1 of 4',
                 title: 'About Section',
-                content: 'Good in-app content surfaces at the right moment. This section introduces who I am and what I do — short, scannable, and immediately useful.'
+                content: 'Good in-app content surfaces at the right moment. This section introduces who I am and what I do â short, scannable, and immediately useful.'
             },
             {
                 target: '[data-tour="experience"]',
@@ -1585,10 +1585,10 @@
                 doNotTrack: nav.doNotTrack === '1' ? 'Enabled' : 'Disabled',
 
                 // Screen & Display
-                screenResolution: `${screen.width} × ${screen.height}`,
+                screenResolution: `${screen.width} Ã ${screen.height}`,
                 colorDepth: `${screen.colorDepth}-bit`,
                 pixelRatio: window.devicePixelRatio || 1,
-                viewportSize: `${window.innerWidth} × ${window.innerHeight}`,
+                viewportSize: `${window.innerWidth} Ã ${window.innerHeight}`,
 
                 // Time & Location
                 timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
